compiling_error.txt
C:\Users\oshin\Documents\GitHub\364Days\cpu_arch.cpp:16:41: warning: unsigned conversion from 'long long int' to 'uint32_t' {aka 'unsigned int'} changes value from '4294967296' to '0' [-Woverflow]
 const uint32_t CART_DOM1_ADDR2_START  = 0x100000000;
                                         ^~~~~~~~~~~
C:\Users\oshin\Documents\GitHub\364Days\cpu_arch.cpp:119:2: error: expected ';' after struct definition
 }
  ^
  ;
C:\Users\oshin\Documents\GitHub\364Days\cpu_arch.cpp:150:10: error: expected initializer before 'imm'
 uint64_t imm = (uint16_t)RegImm
          ^~~
